@@ -1,6 +1,9 @@
 Revision history for Red
 
 {{$NEXT}}
+    - Separate the Model generation for changing attributes
+    - Make join on update use subselect
+    - Teaching AST new dance moves (.replace)
 
 0.1.52  2021-10-22T21:33:53+01:00
     - Fix usage of parameterized roles
